# djangotutorial

./: .gitignore  README.md  db.sqlite3  pyproject.toml
frontend/: urls.py  views.py
frontend/static/frontend/: favicon.png~  styles.css
frontend/templates/frontend/: base.html  home.html  notes.html  polls.html  snippets.html  weather_form.html
mysite/: settings.py  urls.py
notes/: models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_alter_notes_date_created.py  0003_alter_notes_date_created.py  0004_remove_notes_author_alter_notes_date_created.py  0005_alter_notes_date_created.py  0006_alter_notes_date_created.py  0007_notes_content_alter_notes_date_created_and_more.py  0008_alter_notes_date_created.py  0009_alter_notes_content_alter_notes_date_created_and_more.py
notes/templates/notes/: delete.html  notes_create.html  notes_detail.html  notes_home.html  update.html
polls/: tests.py  views.py
polls/migrations/: 0001_initial.py  0002_choice.py
polls/static/polls/: styles.css
polls/templates/polls/: base.html  detail.html  index.html  results.html
quickstart/: views.py
snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py  0002_snippet_highlighted_snippet_owner.py  0003_alter_snippet_language.py  0004_alter_snippet_language.py
templates/admin/: base_site.html
weather/: forms.py  serializers.py  services.py  views.py
